Bug 84620 - The styles drop down menu in Writer crashes LO.
Summary: The styles drop down menu in Writer crashes LO.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: highest critical
Assignee: Szymon Kłos
URL:
Whiteboard: target:4.4.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-10-03 07:28 UTC by Szymon Kłos
Modified: 2014-10-19 07:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (12.22 KB, application/vnd.oasis.opendocument.text)
2014-10-03 07:28 UTC, Szymon Kłos
Details
linux backtrace (30.51 KB, text/plain)
2014-10-03 07:59 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Szymon Kłos 2014-10-03 07:28:56 UTC
Created attachment 107245 [details]
test file

How to reproduce:
1) Open attached file with Writer.
2) When you open the style dropdown menu, go to the first style (on top) and then go down holding the arrow on keyboard.

What happens:
Crash
Comment 1 Yousuf Philips (jay) (retired) 2014-10-03 07:58:57 UTC
Confirmed.

Version: 4.4.0.0.alpha0+
Build ID: 0ada00bd9b4f10861d37b8802564a2ace7385aa2
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-01_06:15:34
Comment 2 Yousuf Philips (jay) (retired) 2014-10-03 07:59:52 UTC
Created attachment 107249 [details]
linux backtrace