fdo#84620 : The styles drop down menu in Writer crashes LO.

Change-Id: I4fe52a1c9aabae1ad09dd94b75c3605dcb023d42
Reviewed-on: https://gerrit.libreoffice.org/11796
Reviewed-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
Tested-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>